# Gh-scraper-manager

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: stars-pipeline.yml
src/ghstars/: __init__.py  cli.py  config.py  models.py
src/ghstars/enrich/: llm.py  templates.py
src/ghstars/export/: csv_export.py  github_fmt.py  jsonl.py  markdown.py
src/ghstars/mirror/: forker.py
src/ghstars/scraper/: collector.py
src/ghstars/search/: chat.py  db.py  embedder.py  hybrid.py
tests/: conftest.py  test_cli.py  test_db.py  test_enrich.py  test_export.py  test_models.py  test_search.py
