[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-stars-manager"
version = "0.1.0"
description = "Comprehensive GitHub Stars manager: scrape, enrich, export, mirror, and search starred repositories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "gh-stars-manager"}]

dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "anthropic>=0.28",
    "sentence-transformers>=2.7",
    "sqlite-vec>=0.1",
    "questionary>=2.0",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
ghstars = "ghstars.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:.*SwigPy.*",
    "ignore::DeprecationWarning:.*swigvarlink.*",
]
